# ML_from_scratch

./: README.md  claude.md  pyproject.toml  test.ipynb  test.py  test2.py  test3.py  test_shap.py
bases/: __init__.py  tree.py
classification_models/: KNN_classification.py  __init__.py  adaboost.py  decision_tree_classifier.py  gradient_boosting_classifier.py  logistic_regression.py  naive_bayes.py  random_forest.py  svm.py
clustering/: __init__.py  cah.py  dbscan.py  gmm.py  hdbscan.py  kmeans.py
dimensionality_reduction/: __init__.py  pca.py  tsne.py
docs/: adaboost.md  cah.md  dbscan.md  decision_tree.md  gmm.md  gradient_boosting.md  kmeans.md  knn.md  lasso.md  linear_regression.md  logistic_regression.md  naive_bayes.md  pca.md  random_forest.md  ridge.md  shap.md  svm.md  tsne.md
explainability/: __init__.py  shap.py
helpers/: __init__.py  activation_functions.py  exceptions.py  utils.py
loss_functions/: __init__.py  binary_cross_enthropy.py  mse.py
regression_models/: __init__.py  decision_tree.py  decision_tree_regressor.py  gradient_boosting.py  lasso.py  linear_regression.py  ridge.py
