[project]
name = "ml-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "cvxopt>=1.3.3",
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pytest>=8.4.0",
    "scikit-learn>=1.6.1",
    "shap>=0.49.1",
]
